[enh] add @capacitor/ios, remove ngx-sumaris-components submodule

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@capacitor/core": "~4.8.1",
     "@capacitor/geolocation": "~4.1.0",
     "@capacitor/haptics": "~4.1.0",
+    "@capacitor/ios": "^4.8.2",
     "@capacitor/keyboard": "~4.1.1",
     "@capacitor/share": "~4.1.1",
     "@capacitor/splash-screen": "~4.2.0",
