--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "ng serve",
     "start:dev": "ng serve --host 0.0.0.0 --disable-host-check",
     "start:prod": "ng serve --configuration production",
-    "build": "ng build",
+    "build": "node --max_old_space_size=4096 node_modules/@angular/cli/bin/ng build --configuration production && npm run i18n:build",
     "build:dev": "ng build --configuration development",
     "build:ci": "ng build --configuration ci",
     "build:prod": "ng build --configuration production && npm run i18n:build",
