--- a/package.json
+++ b/package.json
@@ -96,7 +96,6 @@
     "@capacitor/share": "~4.1.1",
     "@capacitor/splash-screen": "~4.2.0",
     "@capacitor/status-bar": "~4.1.1",
-    "@e-is/capacitor-bluetooth-serial": "0.6.3",
     "@e-is/ngx-material-table": "^17.2.0",
     "@ionic-native/audio-management": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
@@ -164,6 +163,9 @@
     "util": "^0.12.5",
     "uuid": "~7.0.3",
     "zone.js": "~0.14.2"
+  },
+  "optionalDependencies": {
+    "@e-is/capacitor-bluetooth-serial": "0.6.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.1702.3",
